--- a/Home/templates/home.html
+++ b/Home/templates/home.html
@@ -28,6 +28,7 @@
             </div>
             <div> 
                 <button class="loginBtn"> LOGIN </button> 
+                <a href="/register" class="registerBtn"> REGISTER </a>
             </div>
         </div>
 
