--- a/Register/templates/register.html
+++ b/Register/templates/register.html
@@ -16,27 +16,33 @@
         <div class="mainHeader"> 
             <h3 class="registerHereHeader"> Register Here  </h3>
         </div>
-        <div> 
-            <label for="firstname"> Firstname </label> <br> 
-            <input type="text" placeholder="Enter firstname here..." /> 
-        </div>
-        <div> 
-            <label for="lastname"> Lastname </label> <br> 
-            <input type="text" placeholder="Enter lastname here..." /> 
-        </div>
-        <div> 
-            <label for="email"> Email Address </label> <br> 
-            <input type="email" placeholder="Enter your email address here..." /> 
-        </div>
-        <div> 
-            <label for="password"> Password </label><br> 
-            <input type="password" placeholder="Enter your password here..."  /> 
-        </div>
-        <div> 
-            <button class="registerBtn"> REGISTER </button>
-            <a href="/" class="loginBtn"> LOGIN </a>
-        </div>
+        <form>
+            <div> 
+                <label for="firstname"> Firstname </label> <br> 
+                <input id="firstname" type="text" placeholder="Enter firstname here..." required/> 
+            </div>
+            <div> 
+                <label for="lastname"> Lastname </label> <br> 
+                <input id="lastname" type="text" placeholder="Enter lastname here..." required/> 
+            </div>
+            <div> 
+                <label for="email"> Email Address </label> <br> 
+                <input id="emailAddress" type="email" placeholder="Enter your email address here..." required/> 
+            </div>
+            <div> 
+                <label for="password"> Password </label><br> 
+                <input id="password" type="password" placeholder="Enter your password here..."  required/> 
+            </div>
+            <div> 
+                <button class="registerBtn" id="registerBtn"> REGISTER </button>
+                <a href="/" class="loginBtn"> LOGIN </a>
+            </div> 
+
+        </form>
+
      </div>
     
+     <!-- Adding javascript -->
+      <script src="{{ url_for('.static', filename='js/register.js') }}"></script>
 </body>
 </html>
