--- a/Home/templates/home.html
+++ b/Home/templates/home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <script src="{{ url_for('.static', filename='js/ajax-min.js')}}"></script>
     <link rel="stylesheet" href="{{ url_for('.static', filename='css/home.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
