--- a/Register/templates/register.html
+++ b/Register/templates/register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <script src="{{ url_for('.static', filename='js/ajax-min.js')}}"></script>
     <link rel="stylesheet" href="{{ url_for('.static', filename='css/register.css') }}">
     <title>Register Here</title>
 </head>
