added the dashboard

--- a/Home/templates/home.html
+++ b/Home/templates/home.html
@@ -21,14 +21,14 @@
 
             <div> 
                 <label for="email"> Email Address </label> <br> 
-                <input type="text" placeholder="Email" />
+                <input type="text" id="emailAddress"  placeholder="Email" />
             </div>
             <div>
                 <label for="password"> Password </label> <br> 
-                <input type="password" placeholder="Password" /> 
+                <input type="password" id="password" placeholder="Password" /> 
             </div>
             <div> 
-                <button class="loginBtn"> LOGIN </button> 
+                <button class="loginBtn" id="loginBtn"> LOGIN </button> 
                 <a href="/register" class="registerBtn"> REGISTER </a>
             </div>
         </div>
