added the stop camera function to the dashboard.js

--- a/Dashboard/templates/Dashboard.html
+++ b/Dashboard/templates/Dashboard.html
@@ -58,7 +58,11 @@
     <!-- Adding the facial recognition div -->
      <section class="videoMainSection"> 
         <div class="analysisDiv"> 
-            <button id="startCameraBtn" class="startCameraBtn">Start Camera</button>
+            <div>
+                <button id="startCameraBtn" class="startCameraBtn">Start Camera</button>
+                <button id="stopCameraBtn" class="stopCameraBtn">Stop Camera</button>
+            </div>
+
             <video id="webcam" class="webcam" autoplay playsinline ></video>
         </div>
      </section>
