--- a/Dashboard/static/css/dashboard.css
+++ b/Dashboard/static/css/dashboard.css
@@ -97,4 +97,16 @@ body {
 .videoMainSection {
     margin-bottom: 100px;
 }
+.startCameraBtn {
+    height: 35px;
+    width: 176px;
+    margin: 8px;
+    background: blue;
+    color: white;
+    font-weight: bold;
+    font-size: 13px;
+    border-radius: 6px;
+    font-family: 'Poppins';
+    border: none;
+}
 
