--- a/Dashboard/static/css/dashboard.css
+++ b/Dashboard/static/css/dashboard.css
@@ -89,10 +89,11 @@ body {
     border-radius: 5px;
     border: none;
 }
-.webcam {
+.webcam, 
+.analyzedFrames {
     background: #28282d;
     height: 100%;
-    width: 100%;
+    width: 50%;
 }
 .videoMainSection {
     margin-bottom: 100px;
@@ -108,5 +109,21 @@ body {
     border-radius: 6px;
     font-family: 'Poppins';
     border: none;
+}
+.videoDiv {
+    border: 1px solid #3d3d3d;
+    display: flex;
+    height: 87%;
+}
+.stopCameraBtn {
+    height: 35px;
+    width: 16%;
+    border-radius: 5px;
+    border: none;
+    background: red;
+    color: white;
+    font-weight: bold;
+    font-family: 'Poppins';
+    font-size: 13px;
 }
 
