--- a/Dashboard/templates/Dashboard.html
+++ b/Dashboard/templates/Dashboard.html
@@ -35,14 +35,14 @@
             </div> 
 
             <div class="uploadBtnDiv">
-                <input id="file" type="file" hidden/> 
+                <input id="file" type="file" hidden id="file"/> 
                 <button id="selectImageBtn" class="selectImageBtn"> Select Image </button> 
                 <button id="uploadImageBtn" class="uploadImageBtn"> Upload Image </button> 
             </div>
 
         </div>
         <div class="analysisDiv"> 
-
+            <img class="imageAnalysis" id="imageAnalysis" />
         </div>
      </section>
 
